lab/istio/deployments/httpbin-istio/virtualservice-routes-mesh.yaml
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: httpbin-routes-mesh
  namespace: httpbin
spec:
  hosts:
    - httpbin.httpbin.svc.cluster.local

  gateways:
    - mesh

  http:
    - name: httpbin
      headers:
        request:
          add:
            X-A1-origin-2: httpbin-gateway-mesh

      route:
        - destination:
            host: httpbin.httpbin.svc.cluster.local
            port:
              number: 8000
