lab/istio/deployments/httpbin-istio/virtualservice-routes-public.yaml
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: httpbin-routes-public
  namespace: httpbin
spec:
  hosts:
    - httpbin.example.com

  gateways:
    - istio-ingress/httpbin

  http:
    - name: httpbin
      headers:
        request:
          add:
            X-A1-origin-1: httpbin-gateway-public

      route:
        - destination:
            host: httpbin.httpbin.svc.cluster.local
            port:
              number: 8000
